--- a/Data visualization.ipynb
+++ b/Data visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "5f77822d",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "e852ee40",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "484305dc",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
     "# Calculate percentage \n",
     "grouped['percentage'] = grouped.groupby('age_group')['n_participants'].transform(lambda x: 100 * x / x.sum())\n",
     "\n",
-    "# Plot\n",
+    "# Plot creating\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.barplot(data=grouped, x='age_group', y='percentage', hue='diet_group', palette='Set2')\n",
     "plt.title('Diet Distribution by Age Group (Meat Eaters Combined)')\n",
