--- a/Data visualization.ipynb
+++ b/Data visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5f77822d",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e852ee40",
    "metadata": {},
    "outputs": [
@@ -1194,6 +1194,7 @@
     }
    ],
    "source": [
+    "import plotly.io as pio\n",
     "# Merge meat-related groups \n",
     "meat_groups = ['meat', 'meat50', 'meat100']\n",
     "df['diet_group'] = df['diet_group'].apply(lambda x: 'meat_eater' if x in meat_groups else x)\n",
